# GenAI

./: .gitignore  langfuse_skill_example.py  main.py  pyproject.toml  test.html
campusx/chatmodel/: 4_chatmodel_hf_api.py  chatmodel_openai.py
campusx/embedding/: 1_openai_em  2_hf_em  sim.py
campusx/prompts/: chatbot.py  messages.py  messages_placeholder.py  prompt_template.py  prompt_ui.py
chonkie/: document.txt  intro.ipynb
langchain/: URL_fetch_agent.ipynb  agent_with_tool.py  docs.ipynb  hello.py  hello_rag.py  spiltter.ipynb  structured_output.py  structured_output_2.py  test.py
langchain_course/: 02-langsmith.ipynb  03_prompts.ipynb  04_chat_memory.ipynb  05_agents_intro.ipynb  06_agent_executor.ipynb  07_lcel.ipynb  intro.ipynb
langgraph/: docs.ipynb  react_agent.ipynb
transformers/: encoder-decoder.ipynb
