[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "chonkie[cerebras,openai,semantic,viz]>=1.6.6",
    "chromadb>=1.5.9",
    "ddgs>=9.14.2",
    "dotenv>=0.9.9",
    "google-genai>=2.0.1",
    "huggingface-hub>=1.14.0",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=3.2.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "transformers>=5.8.1",
]
